# ApplyPilot-Ai

./: README.md  demo.excalidraw  docker.compose.yml  flow.txt  main.py  pyproject.toml  store.db  ui.py
app/agents/: email_writer.py  extractor_agent.py  matcher_agent.py
app/graph/: builder.py  chunker.py  embedder.py  loader.py  states.py
app/prompts/: email_prompt.py  extractor_prompt.py  matcher_prompt.py
db/: connection.py  models.py
resume_ingestion/: ingestion.py  pipeline.py  retrieval.py
